[package]
name = "textwrap_nif"
version = "0.1.0"
authors = ["Benjamin Fox <foxbenjaminfox@gmail.com>"]
edition = "2018"

[lib]
name = "textwrap_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.37.0"

[dependencies.textwrap]
version = "0.16.2"
features = ["hyphenation", "terminal_size", "smawk"]

[dependencies.hyphenation]
version = "0.8.4"
features = ["embed_en-us"]
